# write-app

./: UPDATELOG.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: check.mjs  publish.mjs  release.mjs
src/: App.vue  components.d.ts  main.ts  router.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-app/: Cargo.toml  README.md
src-tauri/plugins/tauri-plugin-app/.changes/: config.json  initial-release.md  readme.md
src-tauri/plugins/tauri-plugin-app/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/tauri-plugin-app/examples/vanilla/src-tauri/src/: main.rs
src-tauri/plugins/tauri-plugin-app/src/: cmds.rs  lib.rs  states.rs
src-tauri/plugins/tauri-plugin-updater/: Cargo.toml
src-tauri/plugins/tauri-plugin-updater/src/: lib.rs
src-tauri/src/: cmds.rs  events.rs  main.rs  states.rs
src-tauri/src/core/: configs.rs  mod.rs  repositories.rs  spctl_master_disable.rs  tasks.rs
src-tauri/src/management/: app.rs  mod.rs  version.rs
src-tauri/src/tasks/: base.rs  download.rs  mod.rs  upload.rs
src-tauri/src/utils/: config.rs  dirs.rs  error.rs  help.rs  http.rs  init.rs  mod.rs  resolve.rs  tmpl.rs
src/components/: Greet.vue  HelloWorld.vue
src/components/Updater/: index.vue
src/composables/: dark.ts
src/hooks/: useClientDark.vue
src/locals/: en.ts  index.ts  zh.ts
src/pages/: Home.vue  home.vue  regulex.vue  setting.vue
src/stores/: updater.ts
src/utils/: cloneMananger.ts  loadIcon.ts
(+6 files in other folders)
